--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^2.6.1",
     "koa": "^2.6.2",
     "koa-views": "^6.1.4",
+    "mongoose": "^5.4.0",
     "nanoid": "^2.0.0",
     "pug": "^2.0.3",
     "puppeteer": "^1.11.0",
