:closed_lock_with_key: feat: 增加了bcrypt 对密码加密

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Reaper622/koa-trailer#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^2.6.1",
     "koa": "^2.6.2",
     "koa-views": "^6.1.4",
