--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "ejs": "^2.6.1",
+    "glob": "^7.1.3",
     "koa": "^2.6.2",
     "koa-views": "^6.1.4",
     "mongoose": "^5.4.0",
