--- a/package.json
+++ b/package.json
@@ -27,13 +27,28 @@
     "ejs": "^2.6.1",
     "glob": "^7.1.3",
     "koa": "^2.6.2",
+    "koa-router": "^7.4.0",
     "koa-views": "^6.1.4",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.0",
     "nanoid": "^2.0.0",
     "pug": "^2.0.3",
     "puppeteer": "^1.11.0",
     "qiniu": "^7.2.1",
+    "ramda": "^0.26.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "parcel-bundler": "^1.11.0"
   }
 }
