--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "ejs": "^2.6.1",
     "glob": "^7.1.3",
     "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.10.1",
     "koa-views": "^6.1.4",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.0",
