--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "build": "parcel build src/index.html --no-cache -d dist --public-url /"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,9 @@
   },
   "homepage": "https://github.com/Reaper622/koa-trailer#readme",
   "dependencies": {
+    "autoprefixer": "^9.4.3",
     "bcryptjs": "^2.4.3",
+    "cssnext": "^1.8.4",
     "ejs": "^2.6.1",
     "glob": "^7.1.3",
     "koa": "^2.6.2",
@@ -31,10 +34,12 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.1",
+    "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.0",
     "nanoid": "^2.0.0",
+    "node-sass": "^4.11.0",
     "pug": "^2.0.3",
     "puppeteer": "^1.11.0",
     "qiniu": "^7.2.1",
